[gd_scene load_steps=12 format=3 uid="uid://cvr3xqmsh61vx"]

[ext_resource type="Script" uid="uid://bradfh71c233e" path="res://UI/main_menu.gd" id="1_tk8dj"]
[ext_resource type="Shader" uid="uid://dq8be8ovo7wls" path="res://UI/checkboard.gdshader" id="2_f40uw"]
[ext_resource type="Texture2D" uid="uid://dldmorgfnytqv" path="res://Assets/TradeRootsTransparent.png" id="2_tk8dj"]
[ext_resource type="FontFile" uid="uid://detq4thh7cx5s" path="res://Assets/Peralta-Regular.ttf" id="3_4cwpn"]
[ext_resource type="Texture2D" uid="uid://cmajpgdsmowxb" path="res://Assets/checkboard.png" id="3_8ctay"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f40uw"]
bg_color = Color(0.937255, 0.854902, 0.67451, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ev3b6"]
shader = ExtResource("2_f40uw")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ctay"]
bg_color = Color(0.397743, 0.322803, 0.14766, 1)

[sub_resource type="Animation" id="Animation_f40uw"]
resource_name = "default"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.16667, 3.73333),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_8ctay"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ev3b6"]
_data = {
&"RESET": SubResource("Animation_8ctay"),
&"default": SubResource("Animation_f40uw")
}

[node name="MainMenu" type="Control" groups=["nonpausablemenus"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tk8dj")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f40uw")

[node name="Checkboard" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_ev3b6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8ctay")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.805029
offset_right = -500.0
offset_bottom = -0.805054
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tk8dj")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -457.0
offset_top = 45.0
offset_right = -131.0
offset_bottom = 248.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4cwpn")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ctay")
text = "START GAME"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4cwpn")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ctay")
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4cwpn")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ctay")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ctay")
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ev3b6")
}
autoplay = "default"

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
